--- a/GymManager.Api/appsettings.json
+++ b/GymManager.Api/appsettings.json
@@ -28,13 +28,13 @@
   "JwtTokenValidationSettings": {
     "ValidIssuer": "localhost",
     "ValidAudience": "localhost",
-    "SecretKey": "S3cr3t_K3y!.123_S3cr3t_K3y!.123",
+    "SecretKey": "bpm5zVy2RHUMkvcmhffALTnLgy8uEgXU",
     "Duration": 30
   },
   "Jwt": {
-    "Issuer": "localhost",
-    "Audience": "localhost",
-    "Key": "S3cr3t_K3y!.123_S3cr3t_K3y!.123"
+    "Issuer": "admin@website.com",
+    "Audience": "admin@website.com",
+    "Key": "bpm5zVy2RHUMkvcmhffALTnLgy8uEgXU"
   },
   "AllowedHosts": "*",
   "Parameter1": 12,
